@@ -1255,6 +1255,10 @@ any)</simpara></listitem>
 signal</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
+	  <term><parameter>action</parameter>&nbsp;:</term>
+	  <listitem><simpara>the action</simpara></listitem>
+	</varlistentry>
+	<varlistentry>
 	  <term><parameter>user_param1</parameter>&nbsp;:</term>
           <listitem><simpara>the first user parameter (if any) specified
 with the <link
@@ -1284,6 +1288,7 @@ applications to get notification after any action is activated.</para>
       <programlisting><methodsynopsis language="python">
 	  <methodname>callback</methodname>
 	  <methodparam><parameter>uimanager</parameter></methodparam>
+	  <methodparam><parameter>action</parameter></methodparam>
 	  <methodparam><parameter>user_param1</parameter></methodparam>
 	  <methodparam><parameter>...</parameter></methodparam>
 	</methodsynopsis></programlisting>
@@ -1293,6 +1298,10 @@ applications to get notification after any action is activated.</para>
 	  <term><parameter>uimanager</parameter>&nbsp;:</term>
 	  <listitem><simpara>the uimanager that received the
 signal</simpara></listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term><parameter>action</parameter>&nbsp;:</term>
+	  <listitem><simpara>the action</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>user_param1</parameter>&nbsp;:</term>
