@@ -4,10 +4,10 @@
 ]>
 <book id="pygtk-reference" xmlns:xi="http://www.w3.org/2001/XInclude">
   <bookinfo>
-    <pubdate>December 23, 2004</pubdate>
+    <pubdate>December 24, 2004</pubdate>
     <title>PyGTK 2.0 Reference Manual</title>
-    <edition>PyGTK Reference Manual version 2.5.1 for PyGTK 2.5.1</edition>
-    <releaseinfo>Version 2.5.1</releaseinfo>
+    <edition>PyGTK Reference Manual version 2.5.2 for PyGTK 2.5.x</edition>
+    <releaseinfo>Version 2.5.2</releaseinfo>
     <authorgroup>
       <author>
 	<firstname>John</firstname>
