@@ -1,3 +1,10 @@
+2004-12-24  John Finlay  <finlay@moeraki.com>
+
+	* pygtk2-ref.xml: Bump version number and pubdate.
+
+	* pygtk-gtkuimanager.xml ("post-activate", "pre-activate"): Add
+	action param description.
+
 	======== 2.5.1 ============
 2004-12-23  John Finlay  <finlay@moeraki.com>
 
